# github-rag-mcp

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  requirements.txt
sql/: github_rag_schema.sql
src/: __init__.py  github_rag_mcp.py  utils.py
